# styled-markdown

./: README.md  pyproject.toml
app/: __init__.py
app/routes/: home.py
app/static/: blog-dark.css  blog-forest.css  blog-lavender.css  blog-light.css  blog-ocean.css  css-prompt-template.txt
app/static/css/: blog-dark.css  blog-forest.css  blog-lavender.css  blog-light.css  blog-minimal.css  blog-ocean.css  blog-pink-light.css  blog-sunset.css  blog-vintage.css
app/templates/: base.html
app/templates/partials/: _header.html
