[project]
name = "md-to-html"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "cssutils>=2.11.1",
    "flask>=3.1.2",
    "google-genai>=1.56.0",
    "markdown>=3.10",
    "python-dotenv>=1.2.1",
]
